aggiunto pulsante per mostrare/nascondere la password, aggiunta pagina di registrazione

--- a/index.html
+++ b/index.html
@@ -26,19 +26,21 @@
                         <h2 class="h2 sotto-titolo"><strong>Ministero della Giustizia</strong></h2>
                     </div>
                 </div>
+                <!-- TODO Settare opportunatamente i required -->
                 <!-- TODO Fare in modo che raggiunto il breakdown medio l'altezza diventi 75% -->
                 <div class="col-12 col-md-6 p-3 text-center d-flex justify-content-center align-items-center">
-                    <form action="" method="post" class="w-50"> <!-- TODO Aggiungere php -->
+                    <!-- Form Accesso -->
+                    <form action="" method="post" class="w-50 d-block" id="form-accesso"> <!-- TODO Aggiungere php -->
                         <div class="mb-3">
-                            <label for="email-input" class="fs-4 form-label text-start w-100">Email</label>
-                            <input type="email" class="form-control" id="email-input">
+                            <label for="login-email-input" class="fs-4 form-label text-start w-100">Email</label>
+                            <input type="email" class="form-control" id="login-email-input">
                         </div>
                         <div class="mb-4">
                             <label for="password_input" class="fs-4 form-label text-start w-100">Password</label>
 
                             <div class="d-flex justify-content-between align-items-center">
-                                <input type="password" class="form-control" id="password_input" name="password">
-                                <button type="button" class="mostra-password btn" id="show-password" onclick="mostraPassword()">
+                                <input type="password" class="form-control" id="login-password-input" name="password">
+                                <button type="button" class="mostra-password btn" id="show-password" onclick="mostraPassword('login-password-input', 'immagine-mostra-password', event)">
                                     <img src="assets/immagini/mostra.png" class="img-fluid mostra-password" alt="mostra password" id="immagine-mostra-password">
                                 </button>
                             </div>
@@ -47,31 +49,59 @@
                             <div class=" w-75"> 
                                 <input type="submit" class="btn pulsante-accesso fs-5 bg-blu-chiaro text-white w-100 mb-2" value="ACCEDI">
                                 <div>
-                                    <button type="button" class="redirect-registrazione btn w-25">Registrati</button>
+                                    <button type="button" class="redirect-registrazione btn w-25" onclick="switchForm(true)">Registrati</button>
                                 </div>
                             </div>
                         </div>
                     </form>
                     
                     <!-- Form registrazione -->
-                    <form action="" method="post" class="w-50 d-none"> <!-- TODO Aggiungere php -->
+                    <!-- TODO Il form scompare se visto da schermo piccolo -->
+                    <form action="" method="post" class="w-50 d-none" id="form-registrazione"> <!-- TODO Aggiungere php -->
                         <div class="mb-3">
-                            <label for="email-input" class="fs-4 form-label text-start w-100">Email</label>
+                            <label for="singup-nome-input" class="fs-4 form-label text-start w-100">Nome</label>
+                            <input type="nome" class="form-control" id="nome-input">
+                        </div>
+                        <div class="mb-3">
+                            <label for="singup-cognome-input" class="fs-4 form-label text-start w-100">Cognome</label>
+                            <input type="Cognome" class="form-control" id="Cognome-input">
+                        </div>
+                        <!-- TODO Questo deve essere un select -->
+                        <div class="mb-3">
+                            <label for="singup-ruolo-input" class="fs-4 form-label text-start w-100">Ruolo</label>
+                            <input type="ruolo" class="form-control" id="ruolo-input">
+                        </div>
+                        <div class="mb-3">
+                            <label for="singup-email-input" class="fs-4 form-label text-start w-100">Email</label>
                             <input type="email" class="form-control" id="email-input">
                         </div>
                         <div class="mb-4">
-                            <label for="password_input" class="fs-4 form-label text-start w-100">Password</label>
+                            <label for="singup-password-input" class="fs-4 form-label text-start w-100">Password</label>
 
                             <div class="d-flex justify-content-between align-items-center">
-                                <input type="password" class="form-control" id="password_input" name="password">
-                                <button type="button" class="mostra-password btn" id="show-password" onclick="mostraPassword()">
-                                    <img src="assets/immagini/mostra.png" class="img-fluid mostra-password" alt="mostra password" id="immagine-mostra-password">
+                                <input type="password" class="form-control" id="singup-password-input" name="password">
+                                <button type="button" class="mostra-password btn" id="show-password" onclick="mostraPassword('singup-password-input', 'immagine-mostra-singup-password', event)">
+                                    <img src="assets/immagini/mostra.png" class="img-fluid mostra-password" alt="mostra password" id="immagine-mostra-singup-password">
                                 </button>
                             </div>
                         </div>
-                        <div class="mb-3">
-                            <input type="submit" class="btn pulsante-accesso fs-4 bg-blu-chiaro text-white w-75 h-100" value="ACCEDI">
-                            <a href="" class="btn">Registrati</a>
+                        <div class="mb-4">
+                            <label for="singup-conferma-password-input" class="fs-4 form-label text-start w-100">Conferma Password</label>
+
+                            <div class="d-flex justify-content-between align-items-center">
+                                <input type="password" class="form-control" id="singup-conferma-password-input" name="password">
+                                <button type="button" class="mostra-password btn" id="show-password" onclick="mostraPassword('singup-conferma-password-input', 'immagine-mostra-singup-comferma-password', event)">
+                                    <img src="assets/immagini/mostra.png" class="img-fluid mostra-password" alt="mostra password" id="immagine-mostra-singup-comferma-password">
+                                </button>
+                            </div>
+                        </div>
+                        <div class="mb-3 d-flex justify-content-center gap-3 w-100">
+                            <div class=" w-75"> 
+                                <input type="submit" class="btn pulsante-accesso fs-5 bg-blu-chiaro text-white w-100 mb-2" value="REGISTRATI">
+                                <div>
+                                    <button type="button" class="redirect-registrazione btn w-25" onclick="switchForm(false)">Accedi</button>
+                                </div>
+                            </div>
                         </div>
                     </form>
                 </div>
@@ -80,5 +110,6 @@
         </div>
 
         <script src="js/index/visibilitàPassword.js"></script>
+        <script src="js/index/formSwitch.js"></script>
     </body>
 </html>
